syntax = "proto3";

package orders;

import "google/protobuf/timestamp.proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrderById(GetOrderByIdRequest) returns (OrderResponse);
  rpc GetOrdersByUserId(GetOrdersByUserIdRequest) returns (OrdersListResponse);
  rpc GetAllOrders(stream PaginationRequest) returns (stream OrdersListResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
}

message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
}

enum OrderStatus {
  PENDING = 0;
  CONFIRMED = 1;
  CANCELED = 2;
  SHIPPED = 3;
}

message ProductItem {
  string customProductId = 1;
  int32 quantity = 2;
}

message CreateOrder {
  repeated ProductItem products = 2;
  double totalPrice = 3;
}

message CreateOrderRequest {
  GetOrdersByUserIdRequest getUser = 1;
  CreateOrder createOrderDto = 2;
}


message OrderResponse {
  string id = 1;
  string userId = 2;
  repeated ProductItem products = 3;
  double totalPrice = 4;
  OrderStatus status = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message GetOrderByIdRequest {
  string orderId = 1;
}

message GetOrdersByUserIdRequest {
  string userId = 1;
}

message OrdersListResponse {
  repeated OrderResponse orders = 1;
  int32 total = 2;
}

message UpdateOrder {
  repeated ProductItem products = 1;
  optional OrderStatus status= 2;
  optional double totalPrice = 3;
}

message UpdateOrderStatusRequest {
  GetOrderByIdRequest getOrder = 1;
  GetOrdersByUserIdRequest getUser = 2;
  UpdateOrder updateOrderDto = 3;
}
